force-app/main/default/objects/ssot__LocationGroupProdExclChg__dlm/fields/ssot__ExternalLocationIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExternalLocationIdentifier__c</fullName>
    <label>External Location Identifier</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExternalLocationIdentifier</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>