force-app/main/default/objects/ssot__LocationGroupProdExclChg__dlm/fields/ssot__rel_1708941911825_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1708941911825_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LocationGroupProdExclChg_LocationGro_rel</label>
    <referenceTo>ssot__LocationGroup__dlm</referenceTo>
    <relationshipLabel>LocationGroupProdExclChg_LocationGro_rel</relationshipLabel>
    <relationshipName>rel_1708941911825_end</relationshipName>
    <type>Lookup</type>
</CustomField>