force-app/main/default/objects/ssot__LocationGroupProdExclChg__dlm/fields/ssot__rel_1708941913015_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1708941913015_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LocationGroupProdExclChg_LocationId__rel</label>
    <referenceTo>ssot__Location__dlm</referenceTo>
    <relationshipLabel>LocationGroupProdExclChg_LocationId__rel</relationshipLabel>
    <relationshipName>rel_1708941913015_end</relationshipName>
    <type>Lookup</type>
</CustomField>